Time: 3 ms (11.34%), Space: 43.2 MB (69.18%) - LeetHub